--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,4 +99,7 @@ dependencies {
     implementation("com.google.dagger:hilt-android:2.52")
     kapt("com.google.dagger:hilt-compiler:2.52")
 
+
+    implementation("androidx.compose.material3:material3:1.3.0")
+
 }
